# rosbag-image-extractor

./: CMakeLists.txt
include/: bagImageExtractor.hpp
scripts/: bagAnalizer.py
src/: bagImageExtractor.cpp  main.cpp
